--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         // maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
     }
     dependencies {
-        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0-M4'
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0'
     }
 }
 
@@ -18,9 +18,14 @@ apply plugin: 'jacoco'
 
 repositories {
     mavenCentral()
+    maven {
+        name = "forge"
+        url = "http://files.minecraftforge.net/maven"
+    }
 }
 
 sourceSets {
+    api
     testJars
 }
 
@@ -40,12 +45,24 @@ dependencies {
     compile group: 'com.google.code.findbugs', name: 'jsr305', version: '1.3.9'
     compile 'net.sf.jopt-simple:jopt-simple:4.5'
     compile 'org.ow2.asm:asm-debug-all:5.2'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.8.1'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.8.1'
-    testCompile "org.junit.jupiter:junit-jupiter-api:5.0.0-M4"
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.9.0'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.9.0'
+    compile group: 'cpw.mods', name: 'accesstransformers', version: '1.0-SNAPSHOT'
+    compile sourceSets.api.output
+    testCompile "org.junit.jupiter:junit-jupiter-api:5.0.0"
     testCompile(group: 'org.powermock', name: 'powermock-core', version: '1.6.6')
-    testRuntime "org.junit.jupiter:junit-jupiter-engine:5.0.0-M4"
+    testRuntime "org.junit.jupiter:junit-jupiter-engine:5.0.0"
     testRuntime sourceSets.testJars.runtimeClasspath
+}
+
+task apiJar(type: Jar) {
+    classifier = 'api'
+    from sourceSets.api.output
+}
+
+task apiSourcesJar(type: Jar) {
+    classifier = 'apisource'
+    from sourceSets.api.allSource
 }
 
 task testsJar(type: Jar) {
@@ -59,22 +76,50 @@ task sourcesJar(type: Jar) {
 }
 
 artifacts {
+    archives apiJar
+    archives apiSourcesJar
     archives testsJar
     archives jar
     archives sourcesJar
 }
 
-def repoDir = new File(projectDir, "repo")
-repoDir.mkdirs()
-
 uploadArchives {
-    repositories {
-        mavenDeployer {
-            repository(url: "file://" + repoDir.absolutePath)
+    repositories.mavenDeployer {
+        if (project.hasProperty('forgeMavenPassword'))
+        {
+            repository(url: "http://files.minecraftforge.net/maven/manage/upload") {
+                authentication(userName: project.getProperty('forgeMavenUser'), password: project.getProperty('forgeMavenPassword'))
+            }
+        } else {
+            repository(url: 'file://localhost/' + project.file('repo').getAbsolutePath())
+        }
+        pom {
+            groupId = project.group
+            artifactId = project.archivesBaseName
+            project {
+                name project.archivesBaseName
+                packaging 'jar'
+                description 'Mod Launcher'
+                url 'https://github.com/cpw/modlauncher'
 
-            pom.project {
-                description 'Minecraft Mod Launcher'
-                url 'http://github.com/cpw/modlauncher'
+                scm {
+                    url 'https://github.com/cpw/modlauncher'
+                    connection 'scm:git:git://github.com/cpw/modlauncher.git'
+                    developerConnection 'scm:git:git@github.com:cpw/modlauncher.git'
+                }
+
+                issueManagement {
+                    system 'github'
+                    url 'https://github.com/cpw/modlauncher/issues'
+                }
+
+                developers {
+                    developer {
+                        id 'cpw'
+                        name 'cpw'
+                        roles { role 'developer' }
+                    }
+                }
             }
         }
     }
