--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import javax.tools.JavaCompiler
+
 buildscript {
     repositories {
         mavenCentral()
@@ -18,10 +20,6 @@ apply plugin: 'jacoco'
 
 repositories {
     mavenCentral()
-    maven {
-        name = "forge"
-        url = "http://files.minecraftforge.net/maven"
-    }
 }
 
 sourceSets {
@@ -44,6 +42,7 @@ sourceCompatibility = 1.8
 dependencies {
     compile group: 'com.google.code.findbugs', name: 'jsr305', version: '1.3.9'
     compile 'net.sf.jopt-simple:jopt-simple:4.5'
+    apiCompile 'org.ow2.asm:asm-debug-all:5.2'
     compile 'org.ow2.asm:asm-debug-all:5.2'
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.9.0'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.9.0'
@@ -75,6 +74,9 @@ task sourcesJar(type: Jar) {
     from sourceSets.main.allSource
 }
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs << '-Xlint:unchecked'
+}
 artifacts {
     archives apiJar
     archives apiSourcesJar
@@ -123,8 +125,4 @@ uploadArchives {
             }
         }
     }
-}
-
-clean.doLast {
-    repoDir.deleteDir()
 }
