--- a/build.gradle
+++ b/build.gradle
@@ -83,13 +83,24 @@ jar {
     manifest {
         attributes(["Specification-Title": "modlauncher",
                     "Specification-Vendor": "Forge",
-                    "Specification-Version": "1", // We are version 1 of the modlauncher specification
+                    "Specification-Version": "1.0", // We are version 1 of the modlauncher specification
                     "Implementation-Title": project.name,
-                    "Implementation-Version": version,
+                    "Implementation-Version": "${version}+${System.getenv("BUILD_NUMBER")?:0}+${grgit.head().getAbbreviatedId(8)}",
                     "Implementation-Vendor" :"Forge",
                     "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                     "Git-Commit": grgit.head().getAbbreviatedId(8),
-                    "Git-Branch": grgit.branch.getCurrent().getName() ], "modlauncher")
+                    "Git-Branch": grgit.branch.getCurrent().getName() ],
+                "cpw/mods/modlauncher/api/")
+        attributes(["Specification-Title": "modlauncherserviceapi",
+                    "Specification-Vendor": "Forge",
+                    "Specification-Version": "1.0", // We are version 1 of the modlauncher serviceapi specification
+                    "Implementation-Title": project.name,
+                    "Implementation-Version": "${version}+${System.getenv("BUILD_NUMBER")?:0}+${grgit.head().getAbbreviatedId(8)}",
+                    "Implementation-Vendor" :"Forge",
+                    "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
+                    "Git-Commit": grgit.head().getAbbreviatedId(8),
+                    "Git-Branch": grgit.branch.getCurrent().getName() ],
+                "cpw/mods/modlauncher/serviceapi/")
     }
 }
 
