--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'org.ajoberstar.reckon' version '0.7.0'
     id 'org.ajoberstar.grgit' version '2.2.1'
 }
 apply plugin: 'java-library'
@@ -16,6 +17,13 @@ sourceSets {
     testJars
 }
 
+reckon {
+    scopeFromProp()
+    stageFromProp('milestone', 'rc', 'final')
+}
+
+reckonTagCreate.dependsOn check
+
 test {
     useJUnitPlatform()
 }
@@ -25,7 +33,6 @@ jacoco {
 }
 
 group = 'cpw.mods'
-version = '0.1-SNAPSHOT'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
