--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 plugins {
     id 'org.ajoberstar.reckon' version '0.9.0'
     id 'org.ajoberstar.grgit' version '3.0.0'
-    id "com.github.ben-manes.versions" version '0.20.0'
+    id 'com.github.ben-manes.versions' version '0.20.0'
+    id 'me.champeau.gradle.jmh' version '0.4.8'
 }
 apply plugin: 'java-library'
 apply plugin: 'maven'
@@ -63,10 +64,15 @@ dependencies {
     implementation("org.apache.logging.log4j:log4j-api:2.11.+")
     implementation("org.apache.logging.log4j:log4j-core:2.11.+")
     implementation(sourceSets.api.output)
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.3.+")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.4.+")
     testImplementation("org.powermock:powermock-core:2.0.+")
-    testImplementation("org.junit.jupiter:junit-jupiter-engine:5.3.+")
+    testImplementation("org.junit.jupiter:junit-jupiter-engine:5.4.+")
     testImplementation(sourceSets.testJars.runtimeClasspath)
+    jmhImplementation("org.powermock:powermock-core:2.0.+")
+    jmhImplementation("org.ow2.asm:asm:6.2")
+    jmhImplementation("org.ow2.asm:asm-tree:6.2")
+    jmhImplementation("org.ow2.asm:asm-commons:6.2")
+    jmh("org.ow2.asm:asm:6.2")
 }
 
 task apiJar(type: Jar) {
@@ -90,6 +96,19 @@ task sourcesJar(type: Jar) {
     from sourceSets.api.allSource
 }
 
+jmh {
+    include = [ 'cpw.mods.modlauncher.benchmarks.TransformBenchmark' ]
+    benchmarkMode = ['avgt' ]
+    profilers = [ 'stack' ]
+    timeOnIteration = '5s'
+    warmup = '5s'
+    warmupIterations = 3
+    iterations = 3
+    fork = 3
+    timeUnit = 'us'
+}
+
+tasks['jmh'].dependsOn(clean)
 
 ext.sharedManifest = manifest {
     attributes(["Specification-Title": "modlauncher",
@@ -104,7 +123,7 @@ ext.sharedManifest = manifest {
             "cpw/mods/modlauncher/api/")
     attributes(["Specification-Title": "modlauncherserviceapi",
                 "Specification-Vendor": "Forge",
-                "Specification-Version": "1.0", // We are version 1 of the modlauncher serviceapi specification
+                "Specification-Version": "2.0", // We are version 2 of the modlauncher serviceapi specification
                 "Implementation-Title": project.name,
                 "Implementation-Version": "${version}+${System.getenv("BUILD_NUMBER")?:0}+${grgit.head().abbreviatedId}",
                 "Implementation-Vendor" :"Forge",
