--- a/build.gradle
+++ b/build.gradle
@@ -61,8 +61,8 @@ dependencies {
     apiImplementation("org.ow2.asm:asm:6.2")
     apiImplementation("org.ow2.asm:asm-tree:6.2")
     apiImplementation("org.ow2.asm:asm-commons:6.2")
-    implementation("org.apache.logging.log4j:log4j-api:2.11.+")
-    implementation("org.apache.logging.log4j:log4j-core:2.11.+")
+    implementation("org.apache.logging.log4j:log4j-api:2.11.2")
+    implementation("org.apache.logging.log4j:log4j-core:2.11.2")
     implementation(sourceSets.api.output)
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.4.+")
     testImplementation("org.powermock:powermock-core:2.0.+")
