--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,10 @@ apply plugin: 'jacoco'
 
 repositories {
     mavenCentral()
+    maven {
+        name = 'forge'
+        url = 'http://files.minecraftforge.net/maven'
+    }
 }
 
 sourceSets {
@@ -63,6 +67,7 @@ dependencies {
     apiImplementation("org.ow2.asm:asm-commons:6.2")
     implementation("org.apache.logging.log4j:log4j-api:2.11.2")
     implementation("org.apache.logging.log4j:log4j-core:2.11.2")
+    implementation("cpw.mods:grossjava9hacks:1.1.+")
     implementation(sourceSets.api.output)
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.4.+")
     testImplementation("org.powermock:powermock-core:2.0.+")
