--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
+import java.text.SimpleDateFormat
+
 plugins {
-    id 'org.ajoberstar.reckon' version '0.9.0'
-    id 'org.ajoberstar.grgit' version '3.0.0'
-    id 'com.github.ben-manes.versions' version '0.20.0'
+    id 'org.ajoberstar.reckon' version '0.11.0'
+    id 'org.ajoberstar.grgit' version '3.1.1'
+    id 'com.github.ben-manes.versions' version '0.21.0'
     id 'me.champeau.gradle.jmh' version '0.4.8'
 }
 apply plugin: 'java-library'
@@ -69,9 +71,9 @@ dependencies {
     implementation("org.apache.logging.log4j:log4j-core:2.11.2")
     implementation("cpw.mods:grossjava9hacks:1.1.+")
     implementation(sourceSets.api.output)
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.4.+")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.5.+")
     testImplementation("org.powermock:powermock-core:2.0.+")
-    testImplementation("org.junit.jupiter:junit-jupiter-engine:5.4.+")
+    testImplementation("org.junit.jupiter:junit-jupiter-engine:5.5.+")
     testImplementation(sourceSets.testJars.runtimeClasspath)
     jmhImplementation("org.powermock:powermock-core:2.0.+")
     jmhImplementation("org.ow2.asm:asm:6.2")
