--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'org.ajoberstar.reckon' version '0.12.0'
     id 'org.ajoberstar.grgit' version '4.0.0'
     id 'com.github.ben-manes.versions' version '0.27.0'
-    id 'me.champeau.gradle.jmh' version '0.5.0'
+    id 'me.champeau.gradle.jmh' version '0.5.0-rc-1' //0.5.0 is broken for us, see https://github.com/melix/jmh-gradle-plugin/issues/159
 }
 apply plugin: 'java-library'
 apply plugin: 'maven-publish'
