--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,7 @@
 import java.text.SimpleDateFormat
 
 plugins {
-    id 'org.ajoberstar.reckon' version '0.12.0'
-    id 'org.ajoberstar.grgit' version '4.0.0'
+    id 'org.ajoberstar.grgit' version '4.0.2'
     id 'com.github.ben-manes.versions' version '0.27.0'
     id 'me.champeau.gradle.jmh' version '0.5.0'
 }
@@ -15,7 +14,7 @@ repositories {
     mavenCentral()
     maven {
         name = 'forge'
-        url = 'https://files.minecraftforge.net/maven'
+        url = 'https://files.minecraftforge.net/maven/'
     }
 }
 
@@ -24,23 +23,15 @@ sourceSets {
     testJars
 }
 
-reckon {
-    scopeFromProp()
-    stageFromProp('milestone', 'rc', 'final')
+def isNonStable = { String version ->
+    def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { it -> version.toUpperCase().contains(it) }
+    def regex = /^[0-9,.v-]+(-r)?$/
+    return !stableKeyword && !(version ==~ regex)
 }
 
-reckonTagCreate.dependsOn check
-
-dependencyUpdates.resolutionStrategy {
-    componentSelection { rules ->
-        rules.all { ComponentSelection selection ->
-            boolean rejected = ['alpha', 'beta', 'rc', 'cr', 'm', 'preview'].any { qualifier ->
-                selection.candidate.version ==~ /(?i).*[.-]${qualifier}[.\d-]*/
-            }
-            if (rejected) {
-                selection.reject('Release candidate')
-            }
-        }
+dependencyUpdates {
+    rejectVersionIf {
+        isNonStable(it.candidate.version)
     }
 }
 
@@ -49,7 +40,7 @@ test {
 }
 
 jacoco {
-    toolVersion = "0.8.2"
+    toolVersion = '0.8.2'
 }
 
 group = 'cpw.mods'
@@ -58,24 +49,26 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 ext.asmVersion = 7.2
 
+version = grgit.describe(longDescr: true).split('-').with { "${it[0]}.${it[1]}" }
+
 dependencies {
-    implementation("com.google.code.findbugs:jsr305:3.0.2")
-    implementation("net.sf.jopt-simple:jopt-simple:5.0.4")
+    implementation('com.google.code.findbugs:jsr305:3.0.2')
+    implementation('net.sf.jopt-simple:jopt-simple:5.0.4')
     api("org.ow2.asm:asm:${asmVersion}")
     api("org.ow2.asm:asm-tree:${asmVersion}")
     api("org.ow2.asm:asm-commons:${asmVersion}")
     apiImplementation("org.ow2.asm:asm:${asmVersion}")
     apiImplementation("org.ow2.asm:asm-tree:${asmVersion}")
     apiImplementation("org.ow2.asm:asm-commons:${asmVersion}")
-    implementation("org.apache.logging.log4j:log4j-api:2.12.1")
-    implementation("org.apache.logging.log4j:log4j-core:2.12.1")
-    implementation("cpw.mods:grossjava9hacks:1.1.+")
+    implementation('org.apache.logging.log4j:log4j-api:2.11.2')
+    implementation('org.apache.logging.log4j:log4j-core:2.11.2')
+    implementation('cpw.mods:grossjava9hacks:1.3.+')
     implementation(sourceSets.api.output)
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.5.+")
-    testImplementation("org.powermock:powermock-core:2.0.+")
-    testImplementation("org.junit.jupiter:junit-jupiter-engine:5.5.+")
+    testImplementation('org.junit.jupiter:junit-jupiter-api:5.6.+')
+    testImplementation('org.powermock:powermock-core:2.0.+')
+    testImplementation('org.junit.jupiter:junit-jupiter-engine:5.6.+')
     testImplementation(sourceSets.testJars.runtimeClasspath)
-    jmhImplementation("org.powermock:powermock-core:2.0.+")
+    jmhImplementation('org.powermock:powermock-core:2.0.+')
     jmhImplementation("org.ow2.asm:asm:${asmVersion}")
     jmhImplementation("org.ow2.asm:asm-tree:${asmVersion}")
     jmhImplementation("org.ow2.asm:asm-commons:${asmVersion}")
@@ -118,26 +111,28 @@ jmh {
 tasks['jmh'].dependsOn(clean)
 
 ext.sharedManifest = manifest {
-    attributes(["Specification-Title": "modlauncher",
-                "Specification-Vendor": "Forge",
-                "Specification-Version": "4.0", // We are version 4 of the modlauncher specification
+    attributes(['Specification-Title': 'modlauncher',
+                'Specification-Vendor': 'forge',
+                'Specification-Version': '4.0', // We are version 4 of the modlauncher specification
+                'Implementation-Title': project.name,
+                'Implementation-Version': "${project.version}+${System.getenv('BUILD_NUMBER')?:0}+${grgit.branch.current().getName()}.${grgit.head().abbreviatedId}",
+                'Implementation-Vendor' :'forge',
+                'Implementation-Timestamp': java.time.Instant.now().toString(),
+                'Git-Commit': grgit.head().abbreviatedId,
+                'Git-Branch': grgit.branch.current().getName(),
+                'Build-Number': "${System.getenv('BUILD_NUMBER')?:0}" ],
+            'cpw/mods/modlauncher/api/')
+    attributes(['Specification-Title': 'modlauncherserviceapi',
+                'Specification-Vendor': 'forge',
+                'Specification-Version': '4.0', // We are version 4 of the modlauncher serviceapi specification
                 "Implementation-Title": project.name,
-                "Implementation-Version": "${version}+${System.getenv("BUILD_NUMBER")?:0}+${grgit.head().abbreviatedId}",
-                "Implementation-Vendor" :"Forge",
-                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-                "Git-Commit": grgit.head().abbreviatedId,
-                "Git-Branch": grgit.branch.current().getName() ],
-            "cpw/mods/modlauncher/api/")
-    attributes(["Specification-Title": "modlauncherserviceapi",
-                "Specification-Vendor": "Forge",
-                "Specification-Version": "4.0", // We are version 4 of the modlauncher serviceapi specification
-                "Implementation-Title": project.name,
-                "Implementation-Version": "${version}+${System.getenv("BUILD_NUMBER")?:0}+${grgit.head().abbreviatedId}",
-                "Implementation-Vendor" :"Forge",
-                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-                "Git-Commit": grgit.head().abbreviatedId,
-                "Git-Branch": grgit.branch.current().getName() ],
-            "cpw/mods/modlauncher/serviceapi/")
+                'Implementation-Version': "${project.version}+${System.getenv('BUILD_NUMBER')?:0}+${grgit.branch.current().getName()}.${grgit.head().abbreviatedId}",
+                'Implementation-Vendor' :'forge',
+                'Implementation-Timestamp': java.time.Instant.now().toString(),
+                'Git-Commit': grgit.head().abbreviatedId,
+                'Git-Branch': grgit.branch.current().getName(),
+                'Build-Number': "${System.getenv('BUILD_NUMBER')?:0}"],
+            'cpw/mods/modlauncher/serviceapi/')
 }
 
 jar {
@@ -195,7 +190,7 @@ publishing {
                 username project.properties.forgeMavenUser?:'fake'
                 password project.properties.forgeMavenPassword?:'news'
             }
-            url "http://files.minecraftforge.net/maven/manage/upload"
+            url 'http://files.minecraftforge.net/maven/manage/upload'
         }
     }
 }
