--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ import java.text.SimpleDateFormat
 plugins {
     id 'org.ajoberstar.grgit' version '4.0.2'
     id 'com.github.ben-manes.versions' version '0.27.0'
-    id 'me.champeau.gradle.jmh' version '0.5.0'
+    id 'me.champeau.gradle.jmh' version '0.5.0-rc-1'
 }
 apply plugin: 'java-library'
 apply plugin: 'maven-publish'
