--- a/build.gradle
+++ b/build.gradle
@@ -68,11 +68,13 @@ dependencies {
     implementation('org.apache.logging.log4j:log4j-api:2.14.1')
     implementation('org.apache.logging.log4j:log4j-core:2.14.1')
     implementation('cpw.mods:securejarhandler:0.9.+')
+    annotationProcessor('org.apache.logging.log4j:log4j-core:2.14.1')
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.7.+')
     testImplementation('org.powermock:powermock-core:2.0.+')
     testImplementation('org.junit.jupiter:junit-jupiter-engine:5.7.+')
     testCompileOnly(sourceSets.testJars.output)
     testCompileOnly('org.jetbrains:annotations:21.0.0')
+    testRuntimeOnly('cpw.mods:bootstraplauncher:0.1.+')
     jmhImplementation('org.powermock:powermock-core:2.0.+')
     jmhImplementation("org.ow2.asm:asm:${asmVersion}")
     jmhImplementation("org.ow2.asm:asm-tree:${asmVersion}")
