--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,7 @@
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        maven { url = 'https://maven.minecraftforge.net/' }
+    }
+}
 rootProject.name="modlauncher"
