--- a/build.gradle
+++ b/build.gradle
@@ -65,16 +65,15 @@ dependencies {
     api("org.ow2.asm:asm:${asmVersion}")
     api("org.ow2.asm:asm-tree:${asmVersion}")
     api("org.ow2.asm:asm-commons:${asmVersion}")
-    implementation('org.apache.logging.log4j:log4j-api:2.14.1')
-    implementation('org.apache.logging.log4j:log4j-core:2.14.1')
+    implementation('org.slf4j:slf4j-api:2.0.0-alpha5')
     implementation('cpw.mods:securejarhandler:0.9.+')
-    annotationProcessor('org.apache.logging.log4j:log4j-core:2.14.1')
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.7.+')
     testImplementation('org.powermock:powermock-core:2.0.+')
     testImplementation('org.junit.jupiter:junit-jupiter-engine:5.7.+')
     testCompileOnly(sourceSets.testJars.output)
     testCompileOnly('org.jetbrains:annotations:21.0.1')
     testRuntimeOnly('cpw.mods:bootstraplauncher:0.1.+')
+    testRuntimeOnly('org.apache.logging.log4j:log4j-slf4j18-impl:2.17.1')
     jmhImplementation('org.powermock:powermock-core:2.0.+')
     jmhImplementation("org.ow2.asm:asm:${asmVersion}")
     jmhImplementation("org.ow2.asm:asm-tree:${asmVersion}")
